params filling moved from 'required' to 'optional' section